--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 body {
     background: url("../img/background.jpg") no-repeat fixed;
     background-size: cover;
+    margin: 0;
+}
+
+#content {
+    display: flex;
+    min-height: 100vh;
 }
 
 h2 {
@@ -10,12 +16,13 @@ h2 {
 p {
     font-family: 'Quicksand', sans-serif;
     font-size: medium;
+    margin: auto;
 }
 
 .card {
     text-align: center;
     margin: auto;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1em 4em 0 rgba(0, 0, 0, 0.2);
     transition: 2s;
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.4);
@@ -29,24 +36,22 @@ img {
     border-radius: 5px 5px 0 0;
 }
 
-.container {
-    padding: 2px 16px;
-}
-
 .profile {
-    width: 60%;
-
     font-size: 1rem;
     color: white;
 }
 
-.profile a {
-    color: #fce9cb;
+.links {
+    padding: 2em;
 }
 
 .legal {
     color: black;
     background-color: rgba(255, 255, 255, 0.9);
+}
+
+.legal a {
+    color: black;
 }
 
 #footer a {
@@ -56,33 +61,59 @@ img {
 }
 
 a {
-    color: #f39c12;
+    color: white;
     text-decoration: none;
 }
 
-/* Portrait */
-@media screen and (min-width: 300px) and (orientation: portrait) {
+a:hover {
+    color: #7ED1EE;
+}
+
+
+@media (min-width:320px) {
+
+    /* smartphones, iPhone, portrait 480x320 phones */
     .profile {
         width: 80%;
     }
 }
 
+@media (min-width:481px) {
 
-@media screen and (min-width: 800px) {
+    /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
     .profile {
-        width: 22%;
-    }
-
-}
-
-/* Portrait */
-@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
-    .profile {
-        width: 50%;
+        width: 80%;
     }
 }
 
-/* Landscape */
-@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
-    width: 40%;
+@media (min-width:641px) {
+
+    /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+    .profile {
+        width: 40%;
+    }
+}
+
+@media (min-width:961px) {
+
+    /* tablet, landscape iPad, lo-res laptops ands desktops */
+    .profile {
+        width: 30%;
+    }
+}
+
+@media (min-width:1025px) {
+
+    /* big landscape tablets, laptops, and desktops */
+    .profile {
+        width: 20%;
+    }
+}
+
+@media (min-width:1281px) {
+
+    /* hi-res laptops and desktops */
+    .profile {
+        width: 20%;
+    }
 }
