--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
+@font-face {
+  font-family: Gidole-Regular;
+  src: url(Gidole-Regular.ttf);
+}
 body {
-    background: url("../img/background.jpg") no-repeat fixed;
+    background-color: white;
     background-size: cover;
     margin: 0;
+    color: #2d3436;
+    font-family: Gidole-Regular;
 }
 
 #content {
@@ -9,12 +15,8 @@ body {
     min-height: 100vh;
 }
 
-h2 {
-    font-family: 'Noto Serif', serif;
-}
 
 p {
-    font-family: 'Quicksand', sans-serif;
     font-size: medium;
     margin: auto;
 }
@@ -22,51 +24,38 @@ p {
 .card {
     text-align: center;
     margin: auto;
-    box-shadow: 0 1em 4em 0 rgba(0, 0, 0, 0.2);
-    transition: 2s;
     border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.4);
 }
 
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
 
 img {
-    border-radius: 5px 5px 0 0;
+    width: 50%;
+    height: auto;
+    border-radius: 50%;
 }
 
 .profile {
     font-size: 1rem;
-    color: white;
 }
 
 .links {
     padding: 2em;
 }
 
-.legal {
-    color: black;
-    background-color: rgba(255, 255, 255, 0.9);
-}
 
-.legal a {
-    color: black;
-}
 
 #footer a {
     font-size: small;
-    color: rgba(255, 255, 255, 0.25);
     text-decoration: none;
 }
 
 a {
-    color: white;
+    color: #636e72;
     text-decoration: none;
 }
 
 a:hover {
-    color: #7ED1EE;
+    color: #2d3436;
 }
 
 
